fixed slider image to cover and overflow of text

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ nav ul li a:hover {
 
 section {
 	width: 100%;
-	height: 100vh;
+	min-height: 100vh;
 	
 	display: flex;
 	flex-flow: column nowrap;
@@ -79,7 +79,8 @@ section:nth-child(even) {
 
 section#slider {
   background: url(images/miranda.jpg) no-repeat;
-  background-size: 100%;
+  background-size: cover;
+	background-position: center;
   
   opacity: 0.4;
 
